view feedback in applicant fix